...
            insertAll(pts)
        }
    }

    Scaffold(
        topBar = {
            TopAppBar(title = { Text("Snappy Ruler Set") })
        },
        bottomBar = {
            BottomAppBar(
                modifier = Modifier
                    .height(if (isLandscape) 48.dp else 64.dp)
                    .windowInsetsPadding(WindowInsets.navigationBars),
...
                                hapticManager.triggerButtonPressFeedback(
                                    haptic,
                                    state.hapticFeedback
                                )
                            }
                        }) {
                            Icon(Icons.AutoMirrored.Filled.Undo, contentDescription = "Undo")
                        }
                        IconButton(onClick = {
                            vm.redo()
                            if (state.hapticFeedback) {
                                hapticManager.triggerButtonPressFeedback(
                                    haptic,
                                    state.hapticFeedback
                                )
                            }
                        }) {
                            Icon(Icons.AutoMirrored.Filled.Redo, contentDescription = "Redo")
                        }
                        IconButton(onClick = {
                            vm.clear()
                            if (state.hapticFeedback) {
                                hapticManager.triggerButtonPressFeedback(
                                    haptic,
...
                                hapticManager.triggerButtonPressFeedback(
                                    haptic,
                                    state.hapticFeedback
                                )
                            }
                        }) {
                            Icon(Icons.Filled.Save, contentDescription = "Save")
                        }
                        IconButton(onClick = {
                            onNavigateToSettings()
                            if (state.hapticFeedback) {
                                hapticManager.triggerButtonPressFeedback(
                                    haptic,
...
                            },
                            selected = mode == Mode.Line,
                            icon = Icons.Default.ShowChart,
                            contentDescription = "Line Tool"
                        )
                        Text(
                            text = "Line",
                            style = MaterialTheme.typography.labelSmall,
                            color = if (mode == Mode.Line) MaterialTheme.colorScheme.primary else Color.Black.copy(
                                alpha = 0.9f
                            )
                        )
                    }
...
                            onClick = { mode = Mode.RulerLine },
                            selected = mode == Mode.RulerLine,
                            icon = Icons.Default.Straighten,
                            contentDescription = "Ruler Line Tool"
                        )
                        Text(
                            text = "Ruler",
                            style = MaterialTheme.typography.labelSmall,
                            color = if (mode == Mode.RulerLine) MaterialTheme.colorScheme.primary else Color.Black.copy(
                                alpha = 0.9f
                            )
                        )
                    }
...
                            },
                            selected = mode == Mode.Protractor,
                            icon = Icons.Default.Explore,
                            contentDescription = "Protractor Tool"
                        )
                        Text(
                            text = "Protractor",
                            style = MaterialTheme.typography.labelSmall,
                            color = if (mode == Mode.Protractor) MaterialTheme.colorScheme.primary else Color.Black.copy(
                                alpha = 0.9f
                            )
                        )
                    }
...
                            },
                            selected = mode == Mode.Compass,
                            icon = Icons.Default.RadioButtonUnchecked,
                            contentDescription = "Compass Tool"
                        )
                        Text(
                            text = "Compass",
                            style = MaterialTheme.typography.labelSmall,
                            color = if (mode == Mode.Compass) MaterialTheme.colorScheme.primary else Color.Black.copy(
                                alpha = 0.9f
                            )
                        )
                    }
...
